--- a/recipe-app/main.scss
+++ b/recipe-app/main.scss
@@ -8,9 +8,5 @@
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%;
-}
-
-body {
-  font-size: 1.6rem;
+  font-size: calc(15px + 0.390625vw);
 }
