--- a/recipe-app/style.css
+++ b/recipe-app/style.css
@@ -1,97 +1,109 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;800&display=swap");
+
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  font-family: 'Poppins', sans-serif;
+  background-color: #e0dfd7;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
+.add-new {
+  display: block;
+  width: 130px;
+  padding: 8px;
+  margin: 10px auto;
+  border: none;
+  border-radius: 5px;
   color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.new-recipe-container {
+  position: relative;
+  width: 100%;
+  margin: auto;
+}
+
+#error-box {
+  display: none;
+  position: absolute;
+  top: 50px;
+  left: calc(50%);
+  transform: translateX(-50%);
+  color: red;
+}
+
+#backBtn {
+  display: block;
+        width: 120px;
+        padding: 8px 0;
+        border: 0;
+        border-radius: 5px;
+        cursor: pointer;
+        margin: 20px auto;
+        text-align: center;
+        font-size: 1rem;
+        background-color: rgb(188, 188, 188);
+}
+
+#addNewRecipeForm {
+  width: 100%;
+  margin-top: 50px;
+}
+
+#addNewRecipeForm input {
+  display: block;
+  width: 300px;
+  height: 25px;
+  margin: 10px auto;
+  border: none;
+  border-bottom: 1px solid transparent;
+  text-indent: 10px;
+}
+
+#addNewRecipeForm input:focus {
+  border: none;
+  outline: none;
+  border-bottom: 1px solid rgb(188, 188, 188);
+}
+
+#recipeIngredient {
+  display: block;
+  width: 300px;
+  min-height: 350px;
+  margin: auto;
+  border: none;
+  text-indent: 10px;
+}
+
+#recipeIngredient:focus {
+  border: none;
+  outline: none;
+  border-bottom: 1px solid rgb(188, 188, 188);
+}
+
+#recipeSubmit {
+  border-radius: 5px;
+  cursor: pointer;
+  height: 34px !important;
+  color: green;
+}
+
+/* Media */
+
+@media all and (min-width: 576px) {
+  #recipeIngredient {
+  width: 500px;
+  min-height: 500px;
   }
-  a:hover {
-    color: #747bff;
+}
+
+@media all and (min-width: 992px) {
+  #recipeIngredient {
+  width: 800px;
   }
-  button {
-    background-color: #f9f9f9;
+}
+
+@media all and (min-width: 1200px) {
+  #recipeIngredient {
+  width: 1000px;
   }
 }
